# instant-iot-companion

./: README.md  install.sh  port_test.sh  pyproject.toml  start.sh  uninstall.sh
src/instant_conference_companion/: main.py
