[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instant-conference-companion"
version = "1.0"
description = 'Configuration platform for a plug and play device to automate livestreaming'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "William Kelso", email = "wpkelso@ncsu.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
	"PyQt5",
	"pyserial",
]


[project.urls]
Documentation = "https://github.com/unknown/instant-conference-companion#readme"
Issues = "https://github.com/unknown/instant-conference-companion/issues"
Source = "https://github.com/unknown/instant-conference-companion"

[tool.hatch.version]
path = "src/instant_conference_companion/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=instant_conference_companion --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "instant_conference_companion/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
